[gd_scene load_steps=12 format=3 uid="uid://db0ssivj2on56"]

[ext_resource type="Theme" uid="uid://dx7xs6c0v4ixh" path="res://scenes/menu.tres" id="1_dy5hc"]
[ext_resource type="Script" uid="uid://biay0qmjsw1r" path="res://scenes/ui/game_speed.gd" id="1_q6yhj"]
[ext_resource type="Texture2D" uid="uid://bsagbr5xrc7xw" path="res://res/pfeil.png" id="3_0wtdq"]

[sub_resource type="Theme" id="Theme_q6yhj"]
default_font_size = 27

[sub_resource type="Animation" id="Animation_j5j3v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-197.04, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(227.68, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_0wtdq"]
resource_name = "slide_in"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-197.04, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(227.68, 0), Vector2(195.64, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Node2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bt0fi"]
_data = {
&"RESET": SubResource("Animation_j5j3v"),
&"slide_in": SubResource("Animation_0wtdq")
}

[sub_resource type="Theme" id="Theme_j5j3v"]

[sub_resource type="Theme" id="Theme_bt0fi"]
default_font_size = 60
Button/colors/font_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_mhyx2"]
default_font_size = 0
Button/colors/font_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_0wtdq"]
default_font_size = 35
Button/colors/font_color = Color(0, 0, 0, 1)

[node name="game_speed" type="Node2D"]
process_mode = 3
position = Vector2(-197.04, 0)
script = ExtResource("1_q6yhj")

[node name="Panel" type="Panel" parent="."]
offset_right = 229.0
offset_bottom = 134.0
theme = ExtResource("1_dy5hc")

[node name="HSlider" type="HSlider" parent="."]
offset_left = 13.0
offset_top = 47.0
offset_right = 162.0
offset_bottom = 63.0
theme = ExtResource("1_dy5hc")
min_value = 1.0
max_value = 5.0
step = 0.1
value = 1.0
tick_count = 1

[node name="Label" type="Label" parent="."]
z_index = 5
offset_left = 10.04
offset_top = 3.0
offset_right = 184.04
offset_bottom = 61.0
theme = SubResource("Theme_q6yhj")
text = "Game Speed:"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bt0fi")
}

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(227.68, 0)
scale = Vector2(-1, 1)

[node name="Button" type="Button" parent="Node2D"]
offset_right = 43.0
offset_bottom = 137.0
theme = SubResource("Theme_j5j3v")
icon = ExtResource("3_0wtdq")
flat = true

[node name="pause" type="Button" parent="."]
offset_left = 160.04
offset_top = 79.0
offset_right = 202.04
offset_bottom = 170.0
rotation = 1.5708
focus_mode = 1
theme = SubResource("Theme_bt0fi")
text = "="
flat = true

[node name="play" type="Button" parent="."]
offset_left = 160.04
offset_top = 83.0
offset_right = 202.04
offset_bottom = 131.0
scale = Vector2(-1, 0.725)
theme = SubResource("Theme_mhyx2")
icon = ExtResource("3_0wtdq")
flat = true

[node name="Quit" type="Button" parent="."]
offset_left = 11.04
offset_top = 69.0
offset_right = 92.04
offset_bottom = 126.0
theme = SubResource("Theme_0wtdq")
text = "Quit"
flat = true

[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="pressed" from="Node2D/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
